--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "socket.io-client": "^4.7.5",
     "sweetalert2": "^11.6.14"
   },
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
